<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_select_total_tips"
        android:background="@color/background"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:orientation="horizontal"
        android:background="@color/background">

        <EditText
            android:id="@+id/et_search_name"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/search"
            android:hint="@string/count_search_hint"
            android:textSize="14sp"
            style="@style/SearchEditText"/>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:clickable="true"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:background="@drawable/selector_blue_btn"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
