<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:clickable="true"
    android:background="@drawable/selector_list_item">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tv_name"
        android:textSize="12sp"
        android:text="@string/count_today_num"/>

    <TextView
        android:id="@+id/tv_today_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/tv_today"
        android:textSize="12sp"
        android:textColor="@android:color/holo_red_light"/>


    <TextView
        android:id="@+id/tv_total_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/actionsheet_blue"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/tv_total_num"
        android:textSize="12sp"
        android:text="@string/count_total_num"/>


    <TextView
        android:id="@+id/tv_last_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_total_num"
        android:layout_marginTop="5dp"
        android:textColor="@color/actionsheet_blue"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/tv_last_time"
        android:layout_below="@id/tv_total_num"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/count_last_time"/>

</RelativeLayout>