<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

  <!-- 标题 -->
  <include layout="@layout/layout_title"/>

  <!-- 接单频率 -->
  <LinearLayout
      android:id="@+id/ll_freq"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:paddingTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="接单频率："/>

    <EditText
        android:id="@+id/et_min_frequency"
        android:layout_width="70dp"
        android:text=""
        android:maxLength="6"
        android:inputType="numberSigned"
        style="@style/CustomEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="—"/>

    <EditText
        android:id="@+id/et_max_frequency"
        android:layout_width="70dp"
        android:text=""
        android:maxLength="6"
        android:inputType="numberSigned"
        style="@style/CustomEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="ms"/>

  </LinearLayout>


  <!-- 接单帐号 -->
  <LinearLayout
      android:id="@+id/ll_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="接单帐号："/>

    <!-- android:text="17515747237" 18956026993 -->
    <EditText
        android:id="@+id/et_account"
        android:hint="请输入接单帐号"
        android:text=""
        style="@style/CustomEditText"/>

  </LinearLayout>


  <!-- 接单密码 -->
  <LinearLayout
      android:id="@+id/ll_pwd"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="接单密码："/>

    <!-- android:text="201520" GaoZhang119633 -->
    <EditText
        android:id="@+id/et_pwd"
        android:hint="请输入接单密码"
        android:inputType="textPassword"
        android:text=""
        style="@style/CustomEditText"/>

  </LinearLayout>

  <!-- 选择买号 -->
  <LinearLayout
      android:id="@+id/ll_buyer_num"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="选择买号："/>

    <Spinner
        android:id="@+id/sp_buyer_num"
        style="@style/SpinnerStyle"/>

  </LinearLayout>

  <!-- 接单地址 -->
  <LinearLayout
      android:id="@+id/ll_receipt_url"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:visibility="gone"
      android:paddingLeft="20dp"
      android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="接单地址："/>

    <EditText
        android:id="@+id/et_receipt_url"
        android:hint="请输入接单地址"
        android:text="http://www.honghou8.com"
        style="@style/CustomEditText"/>

  </LinearLayout>


  <!-- 最小佣金及最大本金 -->
  <LinearLayout
      android:id="@+id/ll_commission"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="最小佣金："/>

    <EditText
        android:id="@+id/et_min_commission"
        android:layout_width="70dp"
        android:text="1"
        android:maxLength="6"
        android:inputType="numberSigned"
        style="@style/CustomEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="最大本金："/>

    <EditText
        android:id="@+id/et_max_principal"
        android:layout_width="70dp"
        android:text="10000"
        android:maxLength="6"
        android:inputType="numberSigned"
        style="@style/CustomEditText"/>

  </LinearLayout>


  <!-- 不接店铺 -->
  <LinearLayout
      android:id="@+id/ll_ignore"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="不接店铺："/>

    <EditText
        android:id="@+id/et_ignore"
        android:hint="请输入店铺名（可不填）"
        style="@style/CustomEditText"/>

  </LinearLayout>


  <!-- 接单类型 -->
  <LinearLayout
      android:id="@+id/ll_receipt_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="接单类型："/>

    <Spinner
        android:id="@+id/sp_receipt_type"
        style="@style/SpinnerStyle"/>

  </LinearLayout>


  <!-- 验证码 -->
  <LinearLayout
      android:id="@+id/ll_verify_code"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="验  证  码："/>

    <EditText
        android:id="@+id/et_verify_code"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:maxLength="6"
        style="@style/CustomEditText"/>

    <ImageView
        android:id="@+id/iv_verify_code"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp"
        android:src="@mipmap/yzm"/>

  </LinearLayout>


  <!-- 短信验证码 -->
  <LinearLayout
      android:id="@+id/ll_sms_code"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="验  证  码："/>

    <EditText
        android:id="@+id/et_sms_code"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:maxLength="6"
        style="@style/CustomEditText"/>

    <TextView
        android:id="@+id/tv_get_sms_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:clickable="true"
        android:text="获取验证码"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:background="@drawable/selector_blue_btn"/>

  </LinearLayout>

  <!-- 垫付单和标签单 -->
  <LinearLayout
      android:id="@+id/ll_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:visibility="gone">

    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="垫付单"/>

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="标签单"/>

  </LinearLayout>

  <!-- 过滤违规号 -->
  <LinearLayout
      android:id="@+id/ll_filter"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:visibility="gone">

    <CheckBox
        android:id="@+id/filter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="过滤降权号"/>

  </LinearLayout>

  <!-- 不接货返单 -->
  <LinearLayout
      android:id="@+id/ll_task"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:visibility="gone">

    <CheckBox
        android:id="@+id/ll_task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="不接货返单"/>

  </LinearLayout>


  <!-- 帐号类型 -->
  <LinearLayout
      android:id="@+id/ll_account_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:visibility="gone"
      android:paddingLeft="20dp"
      android:paddingRight="20dp">

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="帐号类型："/>

    <Spinner
        android:id="@+id/sp_account_type"
        style="@style/SpinnerStyle"/>

  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="10dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp">

    <TextView
        android:id="@+id/tv_btn1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/receipt_download_app"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tv_btn2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/receipt_open_app"
        android:textColor="@color/colorPrimaryDark"/>

  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="15dp"
      android:paddingLeft="15dp"
      android:paddingRight="15dp">

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:padding="8dp"
        android:clickable="true"
        android:text="@string/receipt_start"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:background="@drawable/selector_blue_btn"/>

    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:clickable="true"
        android:text="@string/receipt_stop"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:background="@drawable/selector_red_btn"/>

  </LinearLayout>

  <TextView
      android:id="@+id/tv_log"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:padding="10dp"
      android:textColor="@android:color/black"
      android:scrollbars="none"
      android:background="@drawable/bg_round_blue_border"/>

</LinearLayout>